NetBSD Problem Report #46801

From tsutsui@ceres.dti.ne.jp  Tue Aug 14 18:20:51 2012
Return-Path: <tsutsui@ceres.dti.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 291D563B85F
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 14 Aug 2012 18:20:51 +0000 (UTC)
Message-Id: <201208141820.q7EIKkHM022166@mirage.localdomain>
Date: Wed, 15 Aug 2012 03:20:46 +0900 (JST)
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
Reply-To: tsutsui@ceres.dti.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: redundant openpam_dynamic() messages on MKPIC=no environment
X-Send-Pr-Version: 3.95

>Number:         46801
>Category:       lib
>Synopsis:       redundant openpam_dynamic() messages on MKPIC=no environment
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    tsutsui
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Aug 14 18:25:00 +0000 2012
>Closed-Date:    Wed Aug 22 03:48:58 +0000 2012
>Last-Modified:  Wed Aug 22 03:48:58 +0000 2012
>Originator:     Izumi Tsutsui
>Release:        NetBSD 6.0_BETA2
>Organization:
>Environment:
System: NetBSD mirage 6.0_BETA2
Architecture: m68000, but possibly occurs on all ports with MKPIC=no
Machine: sun2
>Description:
On sun2, openpam stuff emits following error messages after login:

---
 :

Tue Aug 14 16:00:48 UTC 2012

NetBSD/sun2 (Amnesiac) (ttya)

login: root
Aug 14 16:01:00  login: in openpam_dynamic(): /usr/lib/security/pam_self.so: No such file or directory
Aug 14 16:01:00  login: in openpam_dynamic(): /usr/lib/security/pam_nologin.so: No such file or directory
Aug 14 16:01:00  login: in openpam_dynamic(): /usr/lib/security/pam_skey.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_krb5.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_afslog.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_unix.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_securetty.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_login_access.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_krb5.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_unix.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_lastlog.so: No such file or directory
Aug 14 16:01:01  login: in openpam_dynamic(): /usr/lib/security/pam_krb5.so: No such file or directory
Aug 14 16:01:02  login: in openpam_dynamic(): /usr/lib/security/pam_unix.so: No such file or directory
Aug 14 16:01:02  login: ROOT LOGIN (root) on tty ttya
Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
    2006, 2007, 2008, 2009, 2010, 2011, 2012
    The NetBSD Foundation, Inc.  All rights reserved.
Copyright (c) 1982, 1986, 1989, 1991, 1993
    The Regents of the University of California.  All rights reserved.

NetBSD 6.0_BETA2 (GENERIC) #0: Wed Aug 15 00:37:06 JST 2012

Welcome to NetBSD!

 :
---

>How-To-Repeat:
Build sun2 liveimage by "build.sh -m sun2 -U release live-image"
and boot TME sun2 emulation with it.
>Fix:
Just use PAM_LOG_DEBUG instead of PAM_LOG_ERROR as before for workaround?
("goto err" is used in case of asnprintf(3) error and dlopen failure)

Index: external/bsd/openpam/dist/lib/openpam_dynamic.c
===================================================================
RCS file: /cvsroot/src/external/bsd/openpam/dist/lib/openpam_dynamic.c,v
retrieving revision 1.3
diff -u -p -r1.3 openpam_dynamic.c
--- external/bsd/openpam/dist/lib/openpam_dynamic.c	3 Jan 2012 18:56:49 -0000	1.3
+++ external/bsd/openpam/dist/lib/openpam_dynamic.c	14 Aug 2012 18:14:15 -0000
@@ -127,7 +127,7 @@ buf_err:
 		dlclose(dlh);
 	FREE(module);
 err:
-	openpam_log(PAM_LOG_ERROR, "%s: %s", epath, strerror(errno));
+	openpam_log(PAM_LOG_DEBUG, "%s: %s", epath, strerror(errno));
 	return (NULL);
 }


>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46801 CVS commit: src/external/bsd/openpam/dist/lib
Date: Wed, 15 Aug 2012 02:16:42 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Wed Aug 15 06:16:41 UTC 2012

 Modified Files:
 	src/external/bsd/openpam/dist/lib: openpam_dynamic.c

 Log Message:
 PR/46801: Izumi Tsutsui:
 - downgrade the error of not finding a file to load to a debug message.
   Statically linked OpenPAM (like on sun2) does not have shared objects.
 - make sure we preserve errno around dlclose() which will call munmap()
 XXX: Pullup to 6


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/external/bsd/openpam/dist/lib/openpam_dynamic.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: lib-bug-people->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Thu, 16 Aug 2012 05:37:52 +0900
Responsible-Changed-Why:


State-Changed-From-To: open->pending-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Thu, 16 Aug 2012 05:37:52 +0900
State-Changed-Why:
[pullup-6 #505]


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46801 CVS commit: [netbsd-6] src/external/bsd/openpam/dist/lib
Date: Thu, 16 Aug 2012 02:41:05 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Thu Aug 16 02:41:05 UTC 2012

 Modified Files:
 	src/external/bsd/openpam/dist/lib [netbsd-6]: openpam_dynamic.c

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #505):
 	external/bsd/openpam/dist/lib/openpam_dynamic.c: revision 1.4
 PR/46801: Izumi Tsutsui:
 - downgrade the error of not finding a file to load to a debug message.
   Statically linked OpenPAM (like on sun2) does not have shared objects.
 - make sure we preserve errno around dlclose() which will call munmap()
 XXX: Pullup to 6


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.3.2.1 \
     src/external/bsd/openpam/dist/lib/openpam_dynamic.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 22 Aug 2012 03:48:58 +0000
State-Changed-Why:
Pulled up.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.