Pull up following revision(s) (requested by tsutsui in ticket #505): 	external/bsd/openpam/dist/lib/openpam_dynamic.c: revision 1.4 PR/46801: Izumi Tsutsui: - downgrade the error of not finding a file to load to a debug message.   Statically linked OpenPAM (like on sun2) does not have shared objects. - make sure we preserve errno around dlclose() which will call munmap() XXX: Pullup to 6